# projectgen

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust-clippy.yml
src/: lib.rs  main.rs
src/commands/: mod.rs
src/parsers/: args.rs  mod.rs
