[package]
name = "projectgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "color"] }
dirs = "4.0.0"
git2 = "0.15.0"
termcolor = "1.1.3"
toml_edit = "0.15.0"
